<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- Generic -->
    <string name="app_name">InmotorsTravel</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="save">Guardar</string>
    <string name="message_ok">Grabación realizada correctamente</string>
    <string name="message_ko">Error al grabar</string>
    <string name="field_mandatory">Faltan datos obligatorios</string>
    <string name="back">Volver</string>
    <string name="ok">OK</string>

    <!-- HomeActivity -->
    <string name="past_trips">Viajes pasados</string>
    <string name="future_trips">Viajes futuros</string>
    
    <!--  TripActivity -->
    <string name="date_depart">Fecha de salida</string>
    <string name="date_arrival">Fecha de llegada</string>
    <string name="date_empty">Falta fecha</string>
    <string name="destiny_name">Destinos</string>
    <string name="destiny_name_empty">Falta destino</string>
    <string name="trip_name">Nombre del viaje</string>

    <!-- TripTransportActivity -->
    <string name="mean_of_transport">Medio de transporte</string>
    <string name="city_depart">Ciudad de salida</string>
    <string name="city_arrival">Ciudad de destino</string>
    <string name="prize">Precio</string>
    <string name="locator">Localizador</string>
    <string name="bidi">Bidi</string>
    <string name="pdf">PDF</string>
    <string name="from">De</string>
    <string name="to">A</string>

    <!-- TypeTransport -->
    <string name="plane">Avion</string>
    <string name="train">Tren</string>
    <string name="bus">Bus</string>
    <string name="boat">Barco</string>
    <string name="car">Coche</string>

    <!-- TripAccommodationActivity -->
    <string name="placeAccommodation">Hotel/Apartamento</string>
    <string name="city">Ciudad</string>
    <string name="address">Direccion</string>
    <string name="numRooms">Num. Habitaciones</string>
    <string name="hotel">Hotel</string>
    <string name="checkin">Entrada</string>
    <string name="checkout">Salida</string>

    <!-- TripCalendarActivity-->
    <string name="transportDepartureFrom">Salida desde</string>
    <string name="transportArrivalTo">Llegada a</string>
    <string name="accommodationArrivalTo">Llegada a</string>
    <string name="accommodationDepartureFrom">Salida de</string>
    <string name="activity">Actividad</string>
    <string name="place">Lugar</string>
    <string name="date">Fecha</string>


    <!-- MenuTripActivity -->
    <string name="transporte">Transporte</string>
    <string name="alojamiento">Alojamiento</string>
    <string name="calendario">Calendario</string>
    <string name="mapa">Mapa</string>
    <string name="companeros">Compañeros</string>
    <string name="title_activity_trip_map">InmotorsTravel</string>

    <!-- TripMateActivity -->
    <string name="organizer">Organizador</string>
    <string name="mate">Acompañante</string>
    <string name="username">Usuario</string>
    <string name="rol">Rol</string>
    <string name="user_not_exists">El usuario no existe</string>
    <string name="user_appened_yet">El usuario ya esta agregado al viaje</string>
    <string name="share_prize">Dividir</string>
    <string name="prize2">Precio:</string>

    <string name="errorExiste">El usuario ya es compañero de viaje</string>
    <string name="errorNoExiste">El usuario no existe en la aplicacion</string>
    <string name="errorAgregando">Error agregando compañero de viaje</string>

    <!-- Login/Account creation screen -->
    <string name="welcome">Bienvenido a tu aplicacion de gestion de viajes en grupo</string>
    <string name="signIn">Acceder</string>
    <string name="signUp">Creando cuenta</string>
    <string name="submit">Enviar</string>
    <string name="orText">O</string>
    <string name="createAccount">Crear cuenta</string>
    <string name="forgetPassword">Recuperar contraseña</string>
    <string name="emailHint">Email</string>
    <string name="usernameHint">Usuario</string>
    <string name="passwordHint">Password</string>
    <string name="confirmPasswordHint">Confirmar Password</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_register"><b>Acceder</b> o Registro</string>
    <string name="action_sign_in_short">Acceder</string>
    <string name="action_register">Crear cuenta</string>
    <string name="menu_forgot_password">Recuperar contrasñea</string>
    <string name="login_progress_signing_in">Accediendo&#8230;</string>
    <string name="login_progress_password_email">Enviando Email&#8230;</string>
    <string name="error_invalid_email">El Email es incorrecto</string>
    <string name="error_duplicate_email">El Email pertence a otro usuario</string>
    <string name="error_duplicate_username">Usuario ya utilizado</string>
    <string name="error_incorrect_password">Contraseña incorrecta</string>
    <string name="error_invalid_password">Contraseña demasiado corta</string>
    <string name="error_invalid_confirm_password">Las contraseñas no coinciden</string>
    <string name="error_field_required">Campo obligatorio</string>
    <string name="enter_email_address">Enter Your Email Address</string>

    <string name="no_connection_1">No hay conexion a Internet</string>
    <string name="no_connection_2">No tienes conexion a Internet</string>
    <string name="login">Login</string>
    <string name="login_password_incorrect">Usuario o contraseña incorrecta</string>
    <string name="link_password_ok">Enviado link para resetear contraseña</string>
    <string name="link_password_ko">Fallo al enviar link para resetear contraseña</string>
    <string name="cuenta_creada">Cuenta creada correctamente</string>
    <string name="cuenta_existente">La cuenta ya existe</string>
</resources>
