<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/loader"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:visibility="gone"
        app:indicatorName="PacmanIndicator"
        app:indicatorColor="@color/backgroundHeader"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textStyle="bold"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="ahuearr"
        android:hint="@string/usernameHint"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_password"
        android:imeActionId="@+id/login"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:background="@color/backgroundHeader"
        android:textColor="@color/blanco_texto"
        android:text="@string/action_sign_in_short" />


    <TextView
        android:id="@+id/orTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/orText"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="16dp"
        />

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:background="@color/backgroundHeader"
        android:textColor="@color/blanco_texto"
        android:text="@string/action_register" />

    <Button
        android:id="@+id/btn_ForgetPass"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/backgroundHeader"
        android:textColor="@color/blanco_texto"
        android:layout_marginTop="16dp"
        android:text="@string/forgetPassword" />
</LinearLayout>