<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.gusycorp.travel.activity.TripTransportActivity"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mean_of_transport"
            android:textStyle="bold"
            android:textSize="20sp" />
        <Spinner
            android:id="@+id/type_transport"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_depart"
            android:textStyle="bold"
            android:textSize="20sp" />
        <EditText
            android:id="@+id/date_depart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_arrival"
            android:textStyle="bold"
            android:textSize="20sp" />
        <EditText
            android:id="@+id/date_arrival"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/city_depart"
            android:textStyle="bold"
            android:textSize="20sp" />
        <EditText
            android:id="@+id/city_depart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/city_arrival"
            android:textStyle="bold"
            android:textSize="20sp" />
        <EditText
            android:id="@+id/city_arrival"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prize"
            android:textStyle="bold"
            android:textSize="20sp" />
        <EditText
            android:id="@+id/prize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/locator"
            android:textStyle="bold"
            android:textSize="20sp" />
        <EditText
            android:id="@+id/locator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bidi"
            android:textStyle="bold"
            android:textSize="20sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pdf"
            android:textStyle="bold"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="vertical" >
        <include layout="@layout/menu_trip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>