<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.gusycorp.travel.activity.Accommodation.TripAccommodationActivity"
    android:orientation="vertical" >

    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/loader"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:visibility="gone"
        app:indicatorName="PacmanIndicator"
        app:indicatorColor="@color/backgroundHeader"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/accommodation_trip_mates"
                android:src="@drawable/tripmates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@color/backgroundHeader"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/placeAccommodation"
                android:textStyle="bold"
                android:textSize="20sp" />
            <EditText
                android:id="@+id/place"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/city"
                android:textStyle="bold"
                android:textSize="20sp" />
            <EditText
                android:id="@+id/city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_arrival"
                android:textStyle="bold"
                android:textSize="20sp" />
            <EditText
                android:id="@+id/date_arrival"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_depart"
                android:textStyle="bold"
                android:textSize="20sp" />
            <EditText
                android:id="@+id/date_depart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textStyle="bold"
                android:textSize="20sp" />
            <EditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/numRooms"
                android:textStyle="bold"
                android:textSize="20sp" />
            <EditText
                android:id="@+id/numRooms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prize"
                android:textStyle="bold"
                android:textSize="20sp" />
            <EditText
                android:id="@+id/prize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textSize="20sp" />
            <Button
                android:id="@+id/save_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save"
                />
        </LinearLayout>
    </ScrollView>

</LinearLayout>