<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.gusycorp.travel.activity.Trip.TripEditActivity"
    android:orientation="vertical" >

    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/loader"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:visibility="gone"
        app:indicatorName="PacmanIndicator"
        app:indicatorColor="@color/backgroundHeader"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:id="@+id/label_trip_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/trip_name"
            android:textStyle="bold"
            android:textSize="20sp" />
        <EditText
            android:id="@+id/text_trip_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/label_date_depart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_depart"
            android:textStyle="bold"
            android:textSize="20sp" />
        <EditText
            android:id="@+id/text_date_depart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/label_date_arrival"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_arrival"
            android:textStyle="bold"
            android:textSize="20sp" />
        <EditText
            android:id="@+id/text_date_arrival"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/label_destiny_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/destiny_name"
            android:textStyle="bold"
            android:textSize="20sp" />
        <EditText
            android:id="@+id/text_destiny_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp" />
        <Button
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            />
    </LinearLayout>

</LinearLayout>